--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,16 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>SampleProject</name>
   <description>Test Project</description>
+  <dependencies>
+  <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.17</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.11</version>
+</dependency>
+</dependencies>
 </project>
