--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,17 @@
     <artifactId>poi-ooxml</artifactId>
     <version>3.17</version>
 </dependency>
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.13.0</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+<dependency>
+    <groupId>com.relevantcodes</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>2.41.2</version>
+</dependency>
+
 </dependencies>
 </project>
